[gd_scene load_steps=22 format=3 uid="uid://xbx6ps0eris1"]

[ext_resource type="Texture2D" uid="uid://b6y5i4sr220ei" path="res://Game_Asets/enemy_asets/Enemies-Sheet.webp" id="1_1h0tm"]
[ext_resource type="Script" uid="uid://dxm03604w5btq" path="res://Carrot_Ships/carrot_ships.gd" id="1_ceyc7"]
[ext_resource type="PackedScene" uid="uid://clpt8thxwk8da" path="res://enemy_bullet/enemy_bullet.tscn" id="2_dho0x"]
[ext_resource type="PackedScene" uid="uid://heojovg7fkl8" path="res://energy.tscn" id="3_yugrq"]
[ext_resource type="Texture2D" uid="uid://dbo22dgruhmhs" path="res://ShipDamage-Sheet.png" id="4_53b0b"]
[ext_resource type="Texture2D" uid="uid://b3nwqym3c38xb" path="res://Explosion-Sheet.png" id="5_yugrq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceyc7"]
size = Vector2(22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dho0x"]
atlas = ExtResource("1_1h0tm")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ilem"]
atlas = ExtResource("1_1h0tm")
region = Rect2(50, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_53b0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dho0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ilem")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yugrq"]
size = Vector2(32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vqgc"]
atlas = ExtResource("4_53b0b")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_txt77"]
atlas = ExtResource("4_53b0b")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tavn2"]
atlas = ExtResource("4_53b0b")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5yjr"]
atlas = ExtResource("5_yugrq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskok"]
atlas = ExtResource("5_yugrq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_52fyl"]
atlas = ExtResource("5_yugrq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5habg"]
atlas = ExtResource("5_yugrq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhwp0"]
atlas = ExtResource("5_yugrq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nei1"]
atlas = ExtResource("5_yugrq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_0bc0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vqgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txt77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tavn2")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5yjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52fyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5habg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhwp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nei1")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}]

[node name="CarrotShips" type="CharacterBody2D" node_paths=PackedStringArray("damage_anim") groups=["enemy"]]
texture_filter = 1
script = ExtResource("1_ceyc7")
enemy_bullet_scene = ExtResource("2_dho0x")
damage_anim = NodePath("AnimatedSprite2D2")
energy = ExtResource("3_yugrq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ceyc7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_53b0b")
animation = &"idel"
frame_progress = 0.821846

[node name="HitBox" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" groups=["enemy"]]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_yugrq")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_0bc0s")
animation = &"explode"

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
